Version 5.4
-----------
Added CWnd::LoadBitmap

Version 5.3
-----------
New Features:
* Owner drawn drop down menu items with icons.  CMenubar::SetIcons is
   used to determine which menu items display an icon. By default, the
   framework uses the toolbar's bitmap and resource IDs for displaying 
   icons. Override CFrame::SetButtons to change this behavior.
* Automatic subclassing for windows using WinAPI defined window classes.
   Now when a window is based on predefined window classes, like the 
   common controls (e.g. list-view, tree-view, richedit), the window is
   automatically subclassed. There is now no need to call the subclass
   function in use code.

Changes:
* The WndProc function used to route window messages has been simplified. 
   WndProcDefault should now used to pass messages on for further
   processing, rather than Cxxx::WndProc. (The old method will still work)
* The DialogProc function used to route dialog messages has been simplified.
   DialogProcDefault should now be used to pass messages on for further
   processing, rather than Cxxx::DialogProc. (The old method will still work)
* Added automatic subclassing for all windows created from predefined 
   window class types. This includes, for example, windows created from
   common controls like toolbars and edit controls.
* Removed superclassing. Its redundant now.
* Enhanced CMenubar - Added icons to drop down menus. CMenubar::SetIcons
   determines which menu items display an icon. By default, this is called
   from CFrame::SetButtons.
* In OnNotify, removed the requirement to return the parent OnNotify 
    function. Return 0L for any unhandled notifications.
* In OnCommand, removed the requirement to return the parent OnCommand 
    function. Return FALSE for any unhandled commands.
* Added picture sample. This demonstrates how to display image files using 
   IPicture.    

Incompatibilities with previous versions