@@ -13,6 +13,7 @@ void CView::OnInitialUpdate()
 {
 	// OnInitialUpdate is called immediately after the window is created
 	TRACE("View window created");
+
 }
 
 void CView::PreCreate(CREATESTRUCT &cs)
@@ -32,13 +33,20 @@ LRESULT CView::WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
 	switch (uMsg)
 	{
+	case WM_ERASEBKGND:
+		{
+			RECT rc;
+			GetClientRect(m_hWnd, &rc);
+			GradientFill((HDC)wParam, RGB(255,0,0), RGB(255,255,255), &rc, TRUE);
+		}
+		return TRUE;
 	case WM_SIZE:
 		::InvalidateRect(hWnd, NULL, TRUE);
 		break;	// Also do default processing
 	}
 
 	// pass unhandled messages on for default processing
-	return WndProcDefault(hWnd, uMsg, wParam, lParam);	
+	return WndProcDefault(hWnd, uMsg, wParam, lParam);
 }
 
 void CView::OnPaint(HDC hDC)
